templates/eclipse-che_template.yaml
---
# Source: eclipse-che/templates/che-operator-service.Service.yaml
#
# Copyright (c) 2019-2023 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
# Contributors:
#   Red Hat, Inc. - initial API and implementation
#

apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: che-operator
    app.kubernetes.io/instance: che
    app.kubernetes.io/name: che
    app.kubernetes.io/part-of: che.eclipse.org
  name: che-operator-service
  namespace: eclipse-che
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app: che-operator
---
# Source: eclipse-che/templates/che-operator.Deployment.yaml
#
# Copyright (c) 2019-2023 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
# Contributors:
#   Red Hat, Inc. - initial API and implementation
#

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: che-operator
    app.kubernetes.io/component: che-operator
    app.kubernetes.io/instance: che
    app.kubernetes.io/name: che
    app.kubernetes.io/part-of: che.eclipse.org
  name: che-operator
  namespace: eclipse-che
spec:
  replicas: 1
  selector:
    matchLabels:
      app: che-operator
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: che-operator
        app.kubernetes.io/component: che-operator
        app.kubernetes.io/instance: che
        app.kubernetes.io/name: che
        app.kubernetes.io/part-of: che.eclipse.org
    spec:
      containers:
      - args:
        - --leader-elect
        command:
        - /manager
        image: quay.io/eclipse/che-operator:7.85.0
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /healthz
            port: 6789
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: che-operator
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 60000
          name: metrics
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /readyz
            port: 6789
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: webhook-tls-certs
          readOnly: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      restartPolicy: Always
      securityContext:
        fsGroup: 1724
        runAsUser: 1724
      serviceAccountName: che-operator
      terminationGracePeriodSeconds: 20
      volumes:
      - name: webhook-tls-certs
        secret:
          defaultMode: 420
          secretName: che-operator-service-cert
---
# Source: eclipse-che/templates/org.eclipse.che.MutatingWebhookConfiguration.yaml
#
# Copyright (c) 2019-2023 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
# Contributors:
#   Red Hat, Inc. - initial API and implementation
#

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: eclipse-che/che-operator-serving-cert
  labels:
    app.kubernetes.io/component: che-operator
    app.kubernetes.io/instance: che
    app.kubernetes.io/name: che
    app.kubernetes.io/part-of: che.eclipse.org
  name: org.eclipse.che
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: che-operator-service
      namespace: eclipse-che
      path: /mutate-org-eclipse-che-v2-checluster
  failurePolicy: Fail
  name: mchecluster.kb.io
  rules:
  - apiGroups:
    - org.eclipse.che
    apiVersions:
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - checlusters
  sideEffects: None
---
# Source: eclipse-che/templates/org.eclipse.che.ValidatingWebhookConfiguration.yaml
#
# Copyright (c) 2019-2023 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
# Contributors:
#   Red Hat, Inc. - initial API and implementation
#

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: eclipse-che/che-operator-serving-cert
  labels:
    app.kubernetes.io/component: che-operator
    app.kubernetes.io/instance: che
    app.kubernetes.io/name: che
    app.kubernetes.io/part-of: che.eclipse.org
  name: org.eclipse.che
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: che-operator-service
      namespace: eclipse-che
      path: /validate-org-eclipse-che-v2-checluster
  failurePolicy: Fail
  name: vchecluster.kb.io
  rules:
  - apiGroups:
    - org.eclipse.che
    apiVersions:
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - checlusters
  sideEffects: None
